--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "author": "Anton",
   "license": "MIT",
   "scripts": {
-    "ts-types": "tsc --emitDeclarationOnly --outDir dist",
-    "build": "node esbuild.config.js",
-    "build:prod": "rm -rf dist && yarn ts-types && node esbuild.config.js",
-    "start": "yarn build && node dist/index.js"
+    "lint": "eslint . --ext .ts ./src/",
+    "lint:fix": "yarn lint --fix",
+    "build": "rm -rf dist && node esbuild.config.js",
+    "start": "node dist/index.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@bull-board/fastify": "^3.8.1",
+    "bullmq": "^1.63.2",
+    "fastify": "^3.25.3",
+    "ioredis": "^4.28.2"
+  },
   "devDependencies": {
+    "@types/ioredis": "^4.28.7",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
