--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,11 @@ jobs:
   build:
 
    runs-on: ubuntu-latest
-    
+
+   strategy:
+      matrix:
+        node-version: [14.x, 16.x]
+
    steps:
       - 
         name: Checkout
@@ -26,6 +30,14 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+      - run: npm install
+      - run: npm run build
       - 
         name: Login to Docker Hub
         uses: docker/login-action@v1 
