--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,10 +10,6 @@ jobs:
 
    runs-on: ubuntu-latest
 
-   strategy:
-      matrix:
-        node-version: [14.x, 16.x]
-
    steps:
       - 
         name: Checkout
@@ -34,7 +30,7 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '16.x'
           cache-from: type=local,src=/tmp/.buildx-cache
       - run: npm install
       - run: npm run build
