--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,8 +2,13 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main ]
-
+    branches: 
+      - main
+    tags:
+      - 'v*'
+  pull_request:
+    branches:
+      - 'main'
 jobs:
 
   build:
@@ -18,6 +23,7 @@ jobs:
         name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+
       -     
         name: Cache Docker layers
         uses: actions/cache@v2
@@ -26,20 +32,46 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
+
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js 
         uses: actions/setup-node@v2
         with:
           node-version: '16.x'
-          cache-from: type=local,src=/tmp/.buildx-cache
+
       - run: npm install
       - run: npm run build
+
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          tag_prefix: ""
+
       - 
         name: Login to Docker Hub
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      -    
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3.6.2
+        with:
+          github-token: ${{ github.token }}
+          images: astranavt/bull-board-fastify-docker
+          flavor:
+            latest=true
+          tags: |
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
+            type=semver,enable=true,priority=900,pattern={{version}}
+            type=semver,enable=true,priority=1000,pattern={{major}}.{{minor}}.{{patch}}       
+            type=ref,event=branch
+            type=ref,event=pr
+ 
       -
         name: Build and push
         id: docker_build
@@ -49,9 +81,11 @@ jobs:
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: astranavt/bull-board-fastify-docker:latest
+          tags: astranavt/bull-board-fastify-docker:${{ steps.tag_version.outputs.new_tag }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
