--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,8 @@ name: Docker Image CI
 on:
   push:
     branches: [ main ]
-
+    tags:
+      - 'v*'
 jobs:
 
   build:
@@ -40,6 +41,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
       -
         name: Build and push
         id: docker_build
