--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,7 +41,21 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+      -    
+        name: Docker meta
+        id: docker_meta
+        uses: docker/metadata-action@v3.6.2
+        with:
+          # list of Docker images to use as base name for tags
+          images: ${{ inputs.image-names }}
+          flavor: |
+            latest=false
+          tags: |
+            type=raw,value=latest,
+            type=semver,pattern={{version}}
+            enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
+            type=ref,event=pr,prefix=pr
+ 
       -
         name: Build and push
         id: docker_build
