--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,7 +47,7 @@ jobs:
         uses: docker/metadata-action@v3.6.2
         with:
           # list of Docker images to use as base name for tags
-          images: ${{ inputs.image-names }}
+          images: astranavt/bull-board-fastify-docker
           flavor: |
             latest=false
           tags: |
