--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,9 +51,8 @@ jobs:
           flavor: |
             latest=false
           tags: |
-            type=raw,value=latest,
+            type=raw,value=latest, enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
             type=semver,pattern={{version}}
-            enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
             type=ref,event=pr,prefix=pr
  
       -
