--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,7 @@ jobs:
         name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+
       -     
         name: Cache Docker layers
         uses: actions/cache@v2
@@ -27,14 +28,29 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
+
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js 
         uses: actions/setup-node@v2
         with:
           node-version: '16.x'
-          cache-from: type=local,src=/tmp/.buildx-cache
+
       - run: npm install
       - run: npm run build
+
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.tag_version.outputs.changelog }}
+
       - 
         name: Login to Docker Hub
         uses: docker/login-action@v1 
@@ -46,6 +62,7 @@ jobs:
         id: docker_meta
         uses: docker/metadata-action@v3.6.2
         with:
+          github-token: ${{ github.token }})
           # list of Docker images to use as base name for tags
           images: astranavt/bull-board-fastify-docker
           flavor: |
@@ -64,7 +81,7 @@ jobs:
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          image_name: astranavt/bull-board-fastify-docker
+          # image_name: astranavt/bull-board-fastify-docker
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
