--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -57,13 +57,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
+
       -    
         name: Docker meta
         id: docker_meta
         uses: docker/metadata-action@v3.6.2
         with:
-          github-token: ${{ github.token }})
+          github-token: ${{ github.token }}
           # list of Docker images to use as base name for tags
           images: astranavt/bull-board-fastify-docker
           flavor: |
