--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -80,7 +80,7 @@ jobs:
         with:
           context: ./ 
           file: ./Dockerfile
-          builder: ${{ steps.meta.outputs.name }}
+          builder: ${{ steps.docker_meta.outputs.name }}
           push: true
           # image_name: astranavt/bull-board-fastify-docker
           tags: ${{ steps.meta.outputs.tags }}
