--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -66,12 +66,6 @@ jobs:
           github-token: ${{ github.token }}
           # list of Docker images to use as base name for tags
           images: astranavt/bull-board-fastify-docker
-          flavor: |
-            latest=false
-          tags: |
-            type=raw,value=latest, enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
-            type=semver,pattern={{version}}
-            type=ref,event=pr,prefix=pr
  
       -
         name: Build and push
@@ -90,3 +84,6 @@ jobs:
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+      - name: Tags meta.outputs.tags 
+        run: echo ${{ steps.meta.outputs.tags }}
