--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -69,8 +69,8 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}          
+            type=semver,enable=true,priority=900,pattern={{version}}
+            type=semver,enable=true,priority=1000,pattern={{major}}.{{minor}}.{{patch}}          
  
       -
         name: Build and push
