--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -73,8 +73,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=semver,enable=true,priority=900,pattern={{version}}
-            type=semver,enable=true,priority=1000,pattern={{major}}.{{minor}}.{{patch}}
-            type=sha          
+            type=semver,enable=true,priority=1000,pattern={{major}}.{{minor}}.{{patch}}       
  
       -
         name: Build and push
@@ -86,7 +85,7 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           # image_name: astranavt/bull-board-fastify-docker
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.tag_version.outputs.new_tag }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
