chore(docker-image.yml):-

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -73,9 +73,7 @@ jobs:
           images: astranavt/bull-board-fastify-docker
           tags: |
             type=semver,enable=true,priority=900,pattern={{version}}
-            type=semver,enable=true,priority=1000,pattern={{major}}.{{minor}}.{{patch}}       
-            type=ref,event=branch
-            type=ref,event=tag
+            type=semver,event=branch,enable=true,priority=1000,pattern={{major}}.{{minor}}.{{patch}}       
             type=ref,event=pr
  
       -
