--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -61,8 +61,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
-      - run: echo "RELEASE_VERSION=${GITHUB_REF:11}" >> $GITHUB_ENV
 
       -    
         name: Docker meta
@@ -70,7 +68,6 @@ jobs:
         uses: docker/metadata-action@v3.6.2
         with:
           github-token: ${{ github.token }}
-          # list of Docker images to use as base name for tags
           images: astranavt/bull-board-fastify-docker
           tags: |
             type=semver,enable=true,priority=900,pattern={{version}}
@@ -87,15 +84,11 @@ jobs:
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          # image_name: astranavt/bull-board-fastify-docker
-          tags: ${{ steps.meta.outputs.tags }}_${{ steps.tag_version.outputs.new_tag }}
+          tags: ${{ steps.meta.outputs.tags }}:{{ steps.tag_version.outputs.new_tag }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-
-      - name: Tags meta.outputs.tags 
-        run: echo ${{ steps.meta.outputs.tags }}
 
