--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,13 +2,14 @@ name: Docker Image CI
 
 on:
   push:
-    branches: 
-      - main
-    tags:
-      - 'v*'
-  pull_request:
     branches:
-      - 'main'
+        - '**'
+    tags:
+        - 'v*.*.*'
+  pull_request:
+      branches:
+        - 'main'
+
 jobs:
 
   build:
@@ -16,16 +17,13 @@ jobs:
    runs-on: ubuntu-latest
 
    steps:
-      - 
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -       
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      -     
-        name: Cache Docker layers
+      - name: Cache Docker layers
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
@@ -33,7 +31,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - uses: actions/checkout@v2
       - name: Setup Node.js 
         uses: actions/setup-node@v2
         with:
@@ -42,22 +39,15 @@ jobs:
       - run: npm install
       - run: npm run build
 
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag_prefix: ""
+      # - name: Bump version and push tag
+      #   id: tag_version
+      #   uses: mathieudutour/github-tag-action@v6.0
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     tag_prefix: ""
 
-      - 
-        name: Login to Docker Hub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      -    
-        name: Docker meta
+      - name: Docker meta
         id: meta
         uses: docker/metadata-action@v3.6.2
         with:
@@ -66,12 +56,21 @@ jobs:
           flavor:
             latest=true
           tags: |
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
-            type=semver,enable=true,priority=900,pattern={{version}}
-            type=semver,enable=true,priority=1000,pattern={{major}}.{{minor}}.{{patch}}       
             type=ref,event=branch
             type=ref,event=pr
- 
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha
+
+
+      - name: Login to Docker Hub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       -
         name: Build and push
         id: docker_build
@@ -80,12 +79,8 @@ jobs:
           context: ./ 
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
-          push: true
-          tags: astranavt/bull-board-fastify-docker:${{ steps.tag_version.outputs.new_tag }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
-
